[project]
name = "DisplayScout"
version = "0.1.0"
description = "Automated Display Data Analysis for windows"
readme = "README.md"
authors = [
    { name = "fahara02", email = "idea3d.faruk@gmail.com" }
]
requires-python = "==3.10.*"
dependencies = [
 
    "pydantic>=2.9.2",
 
  
]

[dependency-groups]
dev = [
    "ruff>=0.7.4",
    "black>=24.10.0",
    "pylint>=3.3.1",
    "pytest>=8.3.3",
]

[project.scripts]
displayscout= "displayscout.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


